feat(frontend): standardize component code and UI details
This commit includes:
- Standardize UI elements (buttons, inputs, typography, spacing) across differents components
- Standarize code following good practices structure.